2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* cpuuse/Makefile.am: Use $(OBJEXT) instead of .o.
	* malloctest/Makefile.am: Use $(OBJEXT) instead of .o.
	* monitor/Makefile.am: Use $(OBJEXT) instead of .o.
	* putenvtest/Makefile.am: Use $(OBJEXT) instead of .o.
	* rtems++/Makefile.am: Use $(OBJEXT) instead of .o.
	* rtmonuse/Makefile.am: Use $(OBJEXT) instead of .o.
	* stackchk/Makefile.am: Use $(OBJEXT) instead of .o.
	* termios/Makefile.am: Use $(OBJEXT) instead of .o.

2002-08-01	Joel Sherrill <joel@OARcorp.com>

	* Per PR47 add support for buffered test output.  This involved
	adding defines to redirect output to a buffer and dump it when
	full, at "test pause", and at exit.  To avoid problems when redefining
	exit(), all tests were modified to call rtems_test_exit().
	Some tests, notable psxtests, had to be modified to include 
	the standard test macro .h file (pmacros.h or tmacros.h) to
	enable this support.
	* cpuuse/task2.c, malloctest/task1.c, putenvtest/init.c,
	rtmonuse/task1.c, termios/init.c: Modified.

2002-04-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove ENABLE_GCC28.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* cpuuse/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* malloctest/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* monitor/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* putenvtest/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* rtems++/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* rtmonuse/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* stackchk/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* termios/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-11-01	Joel Sherrill <joel@OARcorp.com>

	* rtems++/Makefile.am: Make sure debug variant of librtems++ 