@@ -1,3 +1,7 @@
+2002-12-02	Joel Sherrill <joel@OARcorp.com>
+
+	* malloctest/init.c: Tasks should be floating point.
+
 2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* .cvsignore: Reformat.
